src/app/components/home/home.component.css
/* ... */
/* Large */
@media (min-width: 992px) and (max-width: 1199px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1 {
        font-size  : 35px;
        line-height: 45px;
    }

    h2 {
        font-size  : 38px;
        line-height: 50px;
    }

    h3 {
        margin-top: 20px;
        font-size : 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 3em;
    }

    img.highlight-section-1 {
        width: 10em;
    }

    img.highlight-section-2 {
        width: 9em;
    }

    img.highlight-section-3 {
        width: 14em;
        top  : 2em;
    }

    a.btn {
        font-size: 20px;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding: 0px 30px;
    }
}

/* Extra Large */
@media (min-width: 1200px) and (max-width: 1399px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1 {
        font-size  : 35px;
        line-height: 45px;
    }

    h2 {
        font-size  : 38px;
        line-height: 50px;
    }

    h3 {
        margin-top: 20px;
        font-size : 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 3em;
    }

    img.highlight-section-1 {
        width: 10em;
    }

    img.highlight-section-2 {
        width: 9em;
    }

    img.highlight-section-3 {
        width: 14em;
        top  : 2em;
    }

    a.btn {
        font-size: 22px;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding: 0px 80px;
    }
}

/* Extra extra large */
@media (min-width: 1400px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1 {
        font-size  : 45px;
        line-height: 61px;
    }

    h2 {
        font-size  : 40px;
        line-height: 50px;
    }

    h3 {
        margin-top: 20px;
        font-size : 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 3em;
    }

    img.highlight-section-1 {
        width: 10em;
    }

    img.highlight-section-2 {
        width: 9em;
    }

    img.highlight-section-3 {
        width: 14em;
        top  : 2em;
    }

    a.btn {
        font-size: 22px;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding: 0px 110px;
    }
}

.raise {
    transition: all 0.3s;
}

.raise:hover {
    transform : translatey(-0.5rem);
    box-shadow: 0 6px 8px -2px #23152c;
}

.feature-padding {
    padding: 11%;
}

.img-holder-feature {
    position       : relative;
    width          : 100%;
    height         : 30vw;
    /* border-width: 1px;
    border-style   : solid;
    border-color   : black; */
}

.img-holder {
    position: relative;
    width   : 100%;
    height  : 100%;
}

body {
    font-family           : "Open Sans", sans-serif;
    -webkit-font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Open Sans", sans-serif;
    color      : #000;
    font-weight: 300;
}

cite {
    font-size : 14px;
    font-style: normal;
}

.center-img {
    position: absolute;
    top     : 0;
    bottom  : 0;
    left    : 0;
    right   : 0;
    margin  : auto;
}

.bottom {
    padding: 0;
    margin : 0;
    width  : 100%;
}

.feature4 {
    width : auto;
    height: 600px;
}

body {
    overflow-x: hidden;
}

a {
    font-size: inherit;
    color    : inherit;
}

a:focus,
a:hover {
    color          : #2e7eed;
    text-decoration: none;
}

.bg-blue {
    background: rgb(55, 47, 198);
    background: linear-gradient(180deg, rgba(55, 47, 198, 1) 0%, rgba(45, 211, 245, 1) 100%);
}

.section {
    padding: 100px 0;
}

.pixel-art {
    image-rendering: pixelated;
    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;
}


.btn {
    text-transform: uppercase;
}

.btn-rounded-icon {
    border-radius: 100px;
    color        : #fff;
    border       : 1px solid #fff;
    padding      : 13px 50px;
}


.scroll-top-to {
    position   : fixed;
    right      : 20px;
    bottom     : 50px;
    width      : 40px;
    height     : 40px;
    line-height: 40px;
    text-align : center;
    background : #2e7eed;
    color      : #fff;
    transition : 0.3s;
    z-index    : 999556;
    cursor     : pointer;
    display    : none;
}

.scroll-top-to:hover {
    background: #333;
}

@media (max-width: 768px) {
    .scroll-top-to {
        bottom     : 15px;
        right      : 15px;
        width      : 35px;
        height     : 35px;
        line-height: 35px;
    }
}

.call-to-action-app {
    text-align: center;
}

.call-to-action-app h2,
.call-to-action-app p,
.call-to-action-app a {
    color: #fff !important;
}

.call-to-action-app p {
    margin-bottom: 60px;
}

.call-to-action-app ul li {
    margin: 10px;
}

@media (max-width: 480px) {
    .call-to-action-app ul li {
        margin-left  : 0;
        margin-bottom: 10px;
    }
}

.call-to-action-app ul li:first-child {
    margin-left: 0;
}

.call-to-action-app ul li a i {
    font-size   : 20px;
    margin-right: 5px;
}

.cta-hire {
    background: #FAFAFA;
}

.cta-hire p {
    width : 65%;
    margin: 0 auto;
}

.cta-hire h2,
.cta-hire p {
    margin-bottom: 20px;
}

.cta-community {
    margin-bottom: 50px;
    padding      : 40px 100px;
}
/* ... */

